--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,10 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
-    background-color: #f0f0f0;
+    background-image: url('background.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 h1 {
@@ -26,4 +29,3 @@ button {
 button:hover {
     background-color: #45a049;
 }
-
