--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
-    background-image: URL('https://github.com/J-B-Computers/J-B-Computers.github.io/blob/1c909a07aa4485127462bc6b536ced7c7d5771bc/images/background.jpg');
+    background-image: URL('https://raw.githubusercontent.com/J-B-Computers/J-B-Computers.github.io/main/images/background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
