basic file update

--- a/styles/main.less
+++ b/styles/main.less
@@ -8,7 +8,7 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
-    background-image: URL('https://raw.githubusercontent.com/J-B-Computers/J-B-Computers.github.io/main/images/background.jpg');
+    background-image: url('https://raw.githubusercontent.com/J-B-Computers/J-B-Computers.github.io/main/images/background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
