--- a/styles/main.less
+++ b/styles/main.less
@@ -1,35 +1,40 @@
-
-// Variables
+// LESS variables for colors
 @primary-color: #4CAF50;
 @secondary-color: #333;
 
+// Basic styling for the body
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    background-image: url('https://raw.githubusercontent.com/J-B-Computers/J-B-Computers.github.io/main/images/background.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    font-family: Arial, sans-serif; // Set font family
+    margin: 0; // Remove default margin
+    padding: 0; // Remove default padding
+    text-align: center; // Center-align text
+    background-image: url('https://raw.githubusercontent.com/J-B-Computers/J-B-Computers.github.io/main/images/background.jpg'); // Background image
+    background-size: cover; // Cover the entire background
+    background-position: center; // Center the background image
+    background-repeat: no-repeat; // Prevent repeating the background image
+    
+    // Styling for the h1 element
     h1 {
-        color: @secondary-color;
+        color: @secondary-color; // Set text color using variable
     }
 
+    // Styling for the p element
     p {
-        color: #666;
+        color: #666; // Set text color
     }
 
+    // Styling for the button
     button {
-        background-color: @primary-color;
-        color: white;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
+        background-color: @primary-color; // Set background color using variable
+        color: white; // Set text color
+        padding: 10px 20px; // Set padding
+        border: none; // Remove border
+        border-radius: 5px; // Set border radius
+        cursor: pointer; // Set cursor to pointer
 
+        // Styling for the button on hover
         &:hover {
-            background-color: darken(@primary-color, 10%);
+            background-color: darken(@primary-color, 10%); // Darken the background color on hover
         }
     }
 }
