--- a/templates/header.ejs
+++ b/templates/header.ejs
@@ -2,7 +2,7 @@
     <h1>Welcome to JB Computers</h1>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+ <li><a href="/">Home</a></li>
             <!-- Remove unnecessary links -->
         </ul>
     </nav>
