--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -8,6 +8,8 @@
     <!-- React and ReactDOM via CDN -->
     <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js" crossorigin></script>
+    <!-- Vue.js via CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 </head>
 <body>
     <!-- Include header partial -->
